samples/_failures_safe/1761704346_b50434_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_35bf1086.c: In function ‘main’:
./samples/SAFE/__tmp_35bf1086.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
